--- a/src/main/resources/templates/dashboardPages/admin/confirmationDeleteVisit.html
+++ b/src/main/resources/templates/dashboardPages/admin/confirmationDeleteVisit.html
@@ -42,9 +42,9 @@
         </li>
 
         <li>
-            <a href="./tables.html">
+            <a th:href="@{/dashboard/admin/users/userVisitList}">
                 <i class="now-ui-icons design_bullet-list-67"></i>
-                <p>Table List</p>
+                <p>Users' Visits</p>
             </a>
         </li>
         <li>
