--- a/src/main/resources/templates/dashboardPages/admin/userVisitListAllUsers.html
+++ b/src/main/resources/templates/dashboardPages/admin/userVisitListAllUsers.html
@@ -22,7 +22,7 @@
                         <p>Dashboard</p>
                     </a>
                 </li>
-                <li class="active">
+                <li>
                     <a th:href="@{/dashboard/admin/allVisits}">
                         <i class="now-ui-icons education_atom"></i>
                         <p>All visits</p>
@@ -41,7 +41,7 @@
                     </a>
                 </li>
 
-                <li>
+                <li class="active">
                     <a th:href="@{/dashboard/admin/users/userVisitList}">
                         <i class="now-ui-icons design_bullet-list-67"></i>
                         <p>Users' Visits</p>
@@ -112,10 +112,7 @@
               <div class="col-md-12">
                   <div class="card">
                       <div class="card-header">
-                          <h4 class="card-title">All Visits</h4>
-                      </div>
-                      <div th:if="${param.visitDeleteSuccess}">
-                          <div class="alert alert-success" style="text-align: center">Visit successfully deleted!</div>
+                          <h4 class="card-title">Users' Visits</h4>
                       </div>
                       <div class="card-body">
                           <div class="table-responsive">
@@ -125,37 +122,42 @@
                                       No.
                                   </th>
                                   <th>
-                                      Date
+                                      Username
                                   </th>
                                   <th>
-                                      Time
+                                      First name
                                   </th>
                                   <th>
-                                      Status
+                                      Last name
                                   </th>
                                   <th>
-                                      Workshop
+                                      Email
                                   </th>
                                   <th>
-                                      Cost
+                                      Phone number
+                                  </th>
+                                  <th>
+                                      Role
+                                  </th>
+                                  <th>
+                                      Enabled
                                   </th>
                                   <th class="text-center">
-                                      Actions
+                                      Action
                                   </th>
                                   </thead>
                                   <tbody>
-                                  <tr th:each="order, state : ${usersOrderList}" class="text-center">
+                                  <tr th:each="user, state : ${userList}" class="text-center">
                                       <td th:text="${state.count}"></td>
-                                      <td th:text="${order.getVisitDate().getDate()}"></td>
-                                      <td th:text="${order.getVisitDate().getTime()}"></td>
-                                      <td th:text="${order.getStatus()}"></td>
-                                      <td th:text="${order.getVisitDate().getWorkshop().getCity()} + ', ' +
-                                      ${order.getVisitDate().getWorkshop().getStreet()} + ' ' +
-                                      ${order.getVisitDate().getWorkshop().getNumber()}"></td>
-                                      <td th:text="${order.getFinalCost()}"></td>
+                                      <td th:text="${user.getUserName()}"></td>
+                                      <td th:text="${user.getFirstName()}"></td>
+                                      <td th:text="${user.getLastName()}"></td>
+                                      <td th:text="${user.getEmail()}"></td>
+                                      <td th:text="${user.getPhoneNumber()}"></td>
+                                      <td th:text="${user.getRole.getName()}"></td>
+                                      <td th:text="${user.getEnabled()}"></td>
                                       <td class="text-center">
-                                          <a th:href="@{/dashboard/admin/allVisits/details(id=${order.getId()})}" class="btn btn-primary">Details</a>
-                                          <a th:href="@{/dashboard/admin/allVisits/delete(id=${order.getId()})}" class="btn btn-danger">Delete</a>
+                                          <a th:href="@{/dashboard/admin/users/userVisitList/show(userId=${user.getId()})}" class="btn btn-primary">Show</a>
                                       </td>
                                   </tr>
                                   </tbody>
