--- a/src/main/resources/templates/dashboardPages/admin/userVisitListSelectedUser.html
+++ b/src/main/resources/templates/dashboardPages/admin/userVisitListSelectedUser.html
@@ -22,10 +22,10 @@
                         <p>Dashboard</p>
                     </a>
                 </li>
-                <li class="active">
-                    <a th:href="@{/dashboard/admin/allVisits}">
+                <li>
+                    <a th:href="@{/dashboard/admin/visits}">
                         <i class="now-ui-icons education_atom"></i>
-                        <p>All visits</p>
+                        <p>Visits</p>
                     </a>
                 </li>
                 <li>
@@ -35,13 +35,13 @@
                     </a>
                 </li>
                 <li>
-                    <a th:href="@{/dashboard/admin/users}">
+                    <a th:href="@{/dashboard/admin/cars}">
                         <i class="now-ui-icons ui-1_bell-53"></i>
-                        <p>Users</p>
+                        <p>Cars</p>
                     </a>
                 </li>
 
-                <li>
+                <li class="active">
                     <a th:href="@{/dashboard/admin/users/userVisitList}">
                         <i class="now-ui-icons design_bullet-list-67"></i>
                         <p>Users' Visits</p>
@@ -112,10 +112,7 @@
               <div class="col-md-12">
                   <div class="card">
                       <div class="card-header">
-                          <h4 class="card-title">All Visits</h4>
-                      </div>
-                      <div th:if="${param.visitDeleteSuccess}">
-                          <div class="alert alert-success" style="text-align: center">Visit successfully deleted!</div>
+                          <h4 class="card-title" th:text="${userName + ' Visit List'}"></h4>
                       </div>
                       <div class="card-body">
                           <div class="table-responsive">
@@ -140,11 +137,11 @@
                                       Cost
                                   </th>
                                   <th class="text-center">
-                                      Actions
+                                      Action
                                   </th>
                                   </thead>
                                   <tbody>
-                                  <tr th:each="order, state : ${usersOrderList}" class="text-center">
+                                  <tr th:each="order, state : ${userOrderList}" class="text-center">
                                       <td th:text="${state.count}"></td>
                                       <td th:text="${order.getVisitDate().getDate()}"></td>
                                       <td th:text="${order.getVisitDate().getTime()}"></td>
@@ -154,8 +151,7 @@
                                       ${order.getVisitDate().getWorkshop().getNumber()}"></td>
                                       <td th:text="${order.getFinalCost()}"></td>
                                       <td class="text-center">
-                                          <a th:href="@{/dashboard/admin/allVisits/details(id=${order.getId()})}" class="btn btn-primary">Details</a>
-                                          <a th:href="@{/dashboard/admin/allVisits/delete(id=${order.getId()})}" class="btn btn-danger">Delete</a>
+                                          <a th:href="@{/dashboard/admin/users/userVisitDetails(id=${order.getId()})}" class="btn btn-primary">Details</a>
                                       </td>
                                   </tr>
                                   </tbody>
