--- a/src/main/resources/templates/dashboardPages/admin/dashboard.html
+++ b/src/main/resources/templates/dashboardPages/admin/dashboard.html
@@ -170,23 +170,12 @@
             <div class="col-lg-4 col-md-6">
                 <div class="card card-chart">
                     <div class="card-header">
-                        <h5 class="card-category">2018 Sales</h5>
-                        <h4 class="card-title">All products</h4>
-                        <div class="dropdown">
-                            <button type="button" class="btn btn-round btn-outline-default dropdown-toggle btn-simple btn-icon no-caret" data-toggle="dropdown">
-                                <i class="now-ui-icons loader_gear"></i>
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                                <a class="dropdown-item text-danger" href="#">Remove Data</a>
-                            </div>
-                        </div>
+                        <h5 class="card-category" th:text="${presentYear}"></h5>
+                        <h4 class="card-title">Visits</h4>
                     </div>
                     <div class="card-body">
                         <div class="chart-area">
-                            <canvas id="exampleChart"></canvas>
+                            <canvas id="visitsChart"></canvas>
                         </div>
                     </div>
                     <div class="card-footer">
@@ -242,8 +231,8 @@
                                 padding:{left:0,right:0,top:15,bottom:15}
                             }
                         };
-                        var htmldata = [[${data}]];
-                        ctx = document.getElementById('exampleChart').getContext("2d");
+                        var htmldata = [[${dataVisitsChart}]];
+                        ctx = document.getElementById('visitsChart').getContext("2d");
 
                         gradientStroke = ctx.createLinearGradient(500, 0, 100, 0);
                         gradientStroke.addColorStop(0, '#80b6f4');
