--- a/src/main/resources/templates/mainPages/header.html
+++ b/src/main/resources/templates/mainPages/header.html
@@ -71,14 +71,14 @@
         <div class="site-navigation">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-6">
+                    <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-dark p-0 justify-content-center">
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
 
                             <div id="navbar-collapse" class="collapse navbar-collapse justify-content-center">
-                                <ul class="nav navbar-nav mr-auto justify-content-center            ">
+                                <ul class="nav navbar-nav justify-content-center            ">
                                     <li class="nav-item"><a class="nav-link" th:href="@{/}">Home</a></li>
 
                                     <li class="nav-item dropdown">
@@ -109,6 +109,9 @@
                                     </li>
 
                                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                                    <li class="nav-item" style="padding: 0 60px;"></li>
+                                    <li class="nav-item"><a class="nav-link" th:href="@{/login}">Login</a></li>
+                                    <li class="nav-item"><a class="nav-link" th:href="@{/registration}">Registration</a></li>
                                 </ul>
                             </div>
                         </nav>
