Added 'findTotalRevenue' to order repository, service and serviceImpl

--- a/src/main/resources/templates/dashboardPages/admin/dashboard.html
+++ b/src/main/resources/templates/dashboardPages/admin/dashboard.html
@@ -131,7 +131,7 @@
                                           <div class="icon icon-info">
                                               <i class="now-ui-icons users_single-02"></i>
                                           </div>
-                                          <h3 class="info-title">562</h3>
+                                          <h3 class="info-title" th:text="${numberOfAllUsers}"></h3>
                                           <h6 class="stats-title">Clients</h6>
                                       </div>
                                   </div>
@@ -142,7 +142,7 @@
                                           <div class="icon icon-success">
                                               <i class="now-ui-icons business_money-coins"></i>
                                           </div>
-                                          <h3 class="info-title"><small>$</small>3,521</h3>
+                                          <h3 class="info-title"><small>$</small></h3>
                                           <h6 class="stats-title">Today Revenue</h6>
                                       </div>
                                   </div>
