--- a/src/main/resources/templates/dashboardPages/admin/dashboard.html
+++ b/src/main/resources/templates/dashboardPages/admin/dashboard.html
@@ -153,7 +153,7 @@
                                           <div class="icon icon-danger">
                                               <i class="now-ui-icons users_single-02"></i>
                                           </div>
-                                          <h3 class="info-title" th:text="${}"></h3>
+                                          <h3 class="info-title" th:text="${numberOfAllMechanics}"></h3>
                                           <h6 class="stats-title">Mechanics</h6>
                                       </div>
                                   </div>
