--- a/src/main/resources/templates/dashboardPages/admin/visitDetails.html
+++ b/src/main/resources/templates/dashboardPages/admin/visitDetails.html
@@ -141,7 +141,12 @@
                                   <div class="col-md-3 pl-1">
                                       <div class="form-group" style="text-align: center">
                                           <label>Status</label>
-                                          <input type="text" class="form-control" th:field="*{selectedVisit.status}" th:value="${selectedVisit.getStatus()}" style="text-align: center" name="status" id="status">
+                                          <div class="dropdown bootstrap-select show-tick">
+                                              <select name="status" id="status" class="selectpicker" data-style="btn btn-white btn-round btn-block" th:field="*{selectedVisit.status}">
+                                                  <option th:each="status : ${statusList}" th:value="${status}" th:text="${status}" th:selected="${status == selectedVisit.getStatus()}">
+                                                  </option>
+                                              </select>
+                                          </div>
                                       </div>
                                   </div>
                               </div>
