--- a/src/main/resources/templates/mainPages/index.html
+++ b/src/main/resources/templates/mainPages/index.html
@@ -398,7 +398,7 @@
   <!--/ Container end -->
 </section><!-- Project area end -->
 
-<span th:replace="/mainPages/footer :: footer"></span>
+<span th:replace="mainPages/footer :: footer"></span>
   </body>
 
   </html>
