Added stillWorking template for pages which are still in progress

--- a/src/main/resources/templates/mainPages/header.html
+++ b/src/main/resources/templates/mainPages/header.html
@@ -84,31 +84,31 @@
                                     <li class="nav-item dropdown">
                                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Company <i class="fa fa-angle-down"></i></a>
                                         <ul class="dropdown-menu" role="menu">
-                                            <li><a href="about.html">About Us</a></li>
-                                            <li><a href="team.html">Our People</a></li>
-                                            <li><a href="testimonials.html">Testimonials</a></li>
-                                            <li><a href="faq.html">Faq</a></li>
-                                            <li><a href="pricing.html">Pricing</a></li>
+                                            <li><a th:href="@{/stillWorking}">About Us</a></li>
+                                            <li><a th:href="@{/stillWorking}">Our People</a></li>
+                                            <li><a th:href="@{/stillWorking}">Testimonials</a></li>
+                                            <li><a th:href="@{/stillWorking}">Faq</a></li>
+                                            <li><a th:href="@{/stillWorking}">Pricing</a></li>
                                         </ul>
                                     </li>
 
                                     <li class="nav-item dropdown">
                                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Projects <i class="fa fa-angle-down"></i></a>
                                         <ul class="dropdown-menu" role="menu">
-                                            <li><a href="projects.html">Projects All</a></li>
-                                            <li><a href="projects-single.html">Projects Single</a></li>
+                                            <li><a th:href="@{/stillWorking}">Projects All</a></li>
+                                            <li><a th:href="@{/stillWorking}">Projects Single</a></li>
                                         </ul>
                                     </li>
 
                                     <li class="nav-item dropdown">
                                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Services <i class="fa fa-angle-down"></i></a>
                                         <ul class="dropdown-menu" role="menu">
-                                            <li><a href="services.html">Services All</a></li>
-                                            <li><a href="service-single.html">Services Single</a></li>
+                                            <li><a th:href="@{/stillWorking}">Services All</a></li>
+                                            <li><a th:href="@{/stillWorking}">Services Single</a></li>
                                         </ul>
                                     </li>
 
-                                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                                    <li class="nav-item"><a class="nav-link" th:href="@{/stillWorking}">Contact</a></li>
                                     <li class="nav-item" style="padding: 0 60px;"></li>
                                     <li class="nav-item"><a class="nav-link" th:href="@{/login}">Login</a></li>
                                     <li class="nav-item"><a class="nav-link" th:href="@{/registration}">Registration</a></li>
