--- a/src/main/resources/templates/mainPages/header.html
+++ b/src/main/resources/templates/mainPages/header.html
@@ -37,7 +37,7 @@
                 <div class="logo-area">
                     <div class="row align-items-center justify-content-center">
                         <div class="logo col-lg-3 text-center text-lg-left mb-3 mb-md-5 mb-lg-0">
-                            <a class="d-block" href="index.html">
+                            <a class="d-block" th:href="@{/}">
                                 <h4>Car Workshop Manager</h4>
                             </a>
                         </div><!-- logo end -->
