Fixed problem with pictures

--- a/src/main/resources/templates/mainPages/header.html
+++ b/src/main/resources/templates/mainPages/header.html
@@ -10,7 +10,7 @@
 
     <!-- Favicon
   ================================================== -->
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" th:href="@{/images/favicon.png}">
 
     <!-- CSS
   ================================================== -->
